--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="billCalendar">BILL CALENDAR</string>
     <string name="debtTracker">DEBT TRACKER</string>
     <string name="receiptScanner">RECEIPT SCANNER</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
